# MPC-PoC-5-HTTPServerAuthDeployado

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  auth.py  context.md  pyproject.toml  server.py
.github/workflows/: deploy-cloud-run.yml
