[project]
name = "poc5-mcp-http-remote"
version = "0.1.0"
description = "PoC 5 — MCP HTTP Server con Auth (deployado)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
